# avangcli

./: .gitignore  .npmignore  .prettierignore  BACKEND_CLI.MD  CHANGELOG.md  README.md  commitlint.config.js  eslint.config.js  package-lock.json  package.json  project-structure.md
backend-cli/: .coverage  README.md  generator.py  pyproject.toml  run.py  setup.py
backend-cli/app/: config.py  database.py  dependencies.py  main.py
backend-cli/app/routers/: health.py
backend-cli/architecture_templates/: clean.json
backend-cli/avangcli/: generator.py
backend-cli/avangcli/core/: pyproject.toml
backend-cli/avangcli/core/core/: settings.py
backend-cli/avangcli/core/core/api/: serializers.py
backend-cli/avangcli/core/core/infrastructure/: setup_app.py
backend-cli/avangcli/core/core/infrastructure/orm/: utils.py
backend-cli/avangcli/db-declarative/: pyproject.toml
backend-cli/avangcli/src/: common.py
backend-cli/avangcli/src/business_logic/: models.py
backend-cli/avangcli/src/scaffolding/general/: service.py
backend-cli/avangcli/src/scaffolding/microservice/application/: services.py
backend-cli/avangcli/src/scaffolding/microservice/domain/: filters.py
backend-cli/avangcli/sync-database/: .env_example  README.md  alembic.ini  main.py  pyproject.toml
backend-cli/avangcli/sync-database/alembic/: env.py
backend-cli/core/api/: rest_api.py
backend-cli/core/domain/: exceptions.py  filters.py  models.py  repositories.py  rules.py
backend-cli/core/infrastructure/orm/: database.py  mappers.py  repositories.py  tables.py
backend-cli/core/use_cases/: core_use_cases.py
backend-cli/db_declarative/sqalchemy/infrastructure/orm/: tables.py
backend-cli/src/: cli.py  common.py  utils.py
backend-cli/src/avangcli/: cli.py
backend-cli/src/avangcli/commands/: init.py
backend-cli/src/avangcli/core/: config.py  exceptions.py  validators.py
backend-cli/src/avangcli/generators/: config_files.py  docker.py  makefile.py  project.py
backend-cli/src/avangcli/models/: project_config.py
backend-cli/src/avangcli/templates/config/: .cz.toml.jinja  .gitignore.jinja  avangclirc.json.jinja  pyproject.toml.jinja
backend-cli/src/avangcli/templates/makefile/: Makefile.jinja
backend-cli/src/avangcli/ui/: messages.py  prompts.py  textual_app.py  theme.tcss
backend-cli/src/avangcli/ui/widgets/: base_step.py  database_step.py  git_step.py  linter_step.py  makefile_step.py  name_step.py  package_manager_step.py  summary_step.py
backend-cli/src/commands/: init.py  module.py
backend-cli/src/core/: config.py  validators.py
backend-cli/src/generators/: config_files.py  docker.py  makefile.py  project.py
backend-cli/src/orm_logic/: services.py
backend-cli/src/scaffolding_crud/files_content_logic/: common.py
backend-cli/src/scaffolding_crud/files_content_logic/domain/: models.py  repositories.py
backend-cli/src/templates/config/: .env.example.jinja  README.md.jinja  alembic.ini.jinja  commitlint.config.js.jinja
backend-cli/src/templates/config/alembic/: env.py.jinja
backend-cli/src/templates/docker/: Dockerfile.jinja  docker-compose.dev.yml.jinja  docker-compose.prod.yml.jinja
backend-cli/src/templates/modules/: helpers.py.jinja  models.py.jinja  routes.py.jinja  schemas.py.jinja  services.py.jinja
backend-cli/src/templates/project_structure/basic/: core_dependencies.py.jinja  dependencies.py.jinja  main.py.jinja  run.py.jinja
backend-cli/src/templates/project_structure/with_db/: database.py.jinja
backend-cli/src/ui/: README.md  messages.py  prompts.py  textual_app.py  theme.tcss
backend-cli/src/ui/widgets/: __init__.py  database_step.py  git_step.py  help_screen.py  linter_step.py  makefile_step.py  name_step.py  package_manager_step.py  summary_step.py
backend-cli/tests/: test_main.py
(+221 files in other folders)
