[project]
name = "avangcli-backend"
version = "0.1.0"
description = "CLI tool to generate and manage FastAPI backend projects"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "AvangCLI", email = "claudia.queipog@gmail.com" }
]
license = { text = "MIT" }

dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "textual>=0.47.0",
    "jinja2>=3.1.0",
    "pydantic>=2.5.0",
]

[project.scripts]
avangcli = "avangcli.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/avangcli"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src/avangcli --cov-report=term-missing"
